misc of layouts

--- a/BookStore/Views/Cart/Index.cshtml
+++ b/BookStore/Views/Cart/Index.cshtml
@@ -19,8 +19,30 @@
 <section id="cart_items">
     <div class="container">
         <div class="row" style="margin-top:30px">
-            
-            <div class="col-lg-6">
+
+            <div class="col-lg-7">
+                <div class="table-responsive cart_info">
+                    <table class="table table-condensed table-fixed">
+                        <thead>
+                            <tr class="cart_menu">
+                                <td class="image col-lg-2">Sản phẩm</td>
+                                <td class="description col-lg-3"></td>
+                                <td class="price col-lg-2">Đơn giá</td>
+                                <td class="quantity col-lg-2">Số lượng</td>
+                                <td class="total col-lg-2">Tổng cộng</td>
+                                <td></td>
+                            </tr>
+                        </thead>
+                        <tbody class="cart-body">
+                            <tr>
+                                <td>Khoan sửa cái này nhe<br /> làm cái Validate bên form thông tin khách hàng trước đi</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+
+            <div class="col-lg-5">
                 <div class="chose_area">
                     <div class="shopper-informations">
                         <div class="col-lg-12">
@@ -42,9 +64,9 @@
                                 </ul>
                             </div>
                         </div>
-                        <a class="btn btn-default update" onclick="updateCustomer()">Cập nhật</a>
-                        <a class="btn btn-default open_map" data-toggle="modal" data-target="#mapModal" onclick="showMap()" >Mở bản đồ</a>
-                        <a class="btn btn-default check_out" onclick="checkout()">Cập nhật và mua hàng</a>
+                        <a class="btn btn-my" style="margin-left:40px" onclick="updateCustomer()">Cập nhật</a>
+                        <a class="btn btn-my" style="margin-left:20px" data-toggle="modal" data-target="#mapModal" onclick="showMap()" >Mở bản đồ</a>
+                        <a class="btn btn-my" style="margin-left:20px" onclick="checkout()">Cập nhật và mua hàng</a>
                         <div id="map-modal">
                             <div class="modal fade" id="mapModal" tabindex="-1" role="dialog" aria-hidden="true">
                                 <div class="modal-dialog" role="document">
@@ -91,19 +113,19 @@
         setTimeout(function () { google.maps.event.trigger(map, 'resize'); }, 1000);
     }
 
-    onClickedCart = function () {
-        $('.sbmincart-closer').remove();
-        $('.sbmincart-subtotal').remove();
-        $('.sbmincart-submit').remove();
-        $("#staplesbmincart").show();
-    }
+    //onClickedCart = function () {
+    //    $('.sbmincart-closer').remove();
+    //    $('.sbmincart-subtotal').remove();
+    //    $('.sbmincart-submit').remove();
+    //    $("#staplesbmincart").show();// cheat để show cái cart ở navigation bar thôi, vì tạm thời chưa có cart "xịn" (ở nửa page bên trái)
+    //}
    
 
 
     $(document).ready(function () {
-        // hàm này ở header, gọi để populate cart ở nửa page bên trái
+        // hàm này ở header, gọi để populate cart ở nửa page bên phải
         //getCart("main");
-        onClickedCart();
+        //onClickedCart();//
         
         // populate dữ liệu khách hàng, trong trường hợp khách hàng đã nhập thông tin trước đó rồi
         populateCheckoutInfo();
