--- a/BookStore/Views/Contact/Index.cshtml
+++ b/BookStore/Views/Contact/Index.cshtml
@@ -27,6 +27,7 @@
         background-color: black;
     }
 </style>
+<link href="~/Assets/css/main.css" rel="stylesheet" />
 
 <div style="margin-top: 50px"></div>
 
@@ -57,7 +58,7 @@
                             <textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Bạn muốn nhắn nhủ gì với chúng tôi"></textarea>
                         </div>
                         <div class="form-group col-md-12">
-                            <input type="submit" name="submit" class="btn btn-primary col-lg-12" style="font-weight:bolder" value="GỬI" onclick="alert('Xin cảm ơn bạn đã liên hệ với chúng tôi. Chúng tôi sẽ có phản hồi sớm nhất qua hộp thư điện tử.')">
+                            <input type="submit" name="submit" class="btn btn-my col-lg-12" style="font-weight:bolder;margin-top:0px" value="GỬI" onclick="alert('Xin cảm ơn bạn đã liên hệ với chúng tôi. Chúng tôi sẽ có phản hồi sớm nhất qua hộp thư điện tử.')">
                         </div>
                     </form>
                 </div>
