--- a/BookStore/Assets/css/main.css
+++ b/BookStore/Assets/css/main.css
@@ -857,21 +857,6 @@ h2.title {
             color: lightpink;
         }
 
-.product-overlay .add-to-cart {
-    background: #fff;
-    border: 0 none;
-    border-radius: 0;
-    color: #0fb3bc;
-    font-family: 'Roboto', sans-serif;
-    font-size: 15px;
-    margin-bottom: 25px;
-}
-
-    .product-overlay .add-to-cart:hover {
-        background: #fff;
-        color: rgb(0, 233, 58);
-    }
-
 
 .product-overlay p {
     font-family: 'Roboto', sans-serif;
@@ -882,35 +867,6 @@ h2.title {
 
 
 
-.add-to-cart {
-    background: #F5F5ED;
-    border: 0 none;
-    border-radius: 0;
-    color: #696763;
-    font-family: 'Roboto', sans-serif;
-    font-size: 15px;
-    margin-bottom: 25px;
-}
-
-    .add-to-cart:hover {
-        background: rgb(3, 247, 44);
-        border: 0 none;
-        border-radius: 0;
-        color: #FFFFFF;
-    }
-
-.add-to {
-    margin-bottom: 10px;
-}
-
-.add-to-cart i {
-    margin-right: 5px;
-}
-
-.add-to-cart:hover {
-    background: rgb(15, 254, 35);
-    color: #FFFFFF;
-}
 
 .choose {
     border-top: 1px solid #F7F7F0;
@@ -1223,19 +1179,6 @@ h2.title {
     margin-top: 15px;
 }
 
-
-.cart {
-    background: #13e6f2;
-    border: 0 none;
-    border-radius: 0;
-    color: #FFFFFF;
-    font-family: 'Roboto', sans-serif;
-    font-size: 15px;
-    margin-bottom: 10px;
-    margin-left: 20px;
-}
-
-
 .shop-details-tab {
     border: 1px solid #F7F7F0;
     margin-bottom: 75px;
@@ -1500,10 +1443,6 @@ h2.title {
             content: " ";
         }
 
-#cart_items .cart_info {
-    border: 1px solid #E6E4DF;
-    margin-bottom: 50px;
-}
 
 .table-fixed-preview thead {
     width: 100%;
@@ -1546,118 +1485,10 @@ h2.title {
         border-bottom-width: 0;
     }
 
-#cart_items .cart_info .cart_menu {
-    background: #12a7f1;
-    color: #fff;
-    font-size: 16px;
-    font-family: 'Roboto', sans-serif;
-    font-weight: normal;
-}
-
-
-#cart_items .cart_info .table.table-condensed thead tr {
-    height: 41px;
-}
 
 .table-condensed thead tr > td {
     padding-top: 10px;
 }
-
-
-#cart_items .cart_info .table.table-condensed tr {
-    border-bottom: 1px solid#F7F7F0;
-}
-
-    #cart_items .cart_info .table.table-condensed tr:last-child {
-        border-bottom: 0;
-    }
-
-.cart_info table tr td {
-    border-top: 0 none;
-    vertical-align: inherit;
-}
-
-
-#cart_items .cart_info .image {
-    padding-left: 30px;
-}
-
-
-#cart_items .cart_info .cart_description h4 {
-    margin-bottom: 0;
-}
-
-    #cart_items .cart_info .cart_description h4 a {
-        color: #363432;
-        font-family: 'Roboto',sans-serif;
-        font-size: 20px;
-        font-weight: normal;
-    }
-
-#cart_items .cart_info .cart_description p {
-    color: #696763;
-}
-
-
-#cart_items .cart_info .cart_price p {
-    color: #696763;
-    font-size: 18px;
-}
-
-
-#cart_items .cart_info .cart_total_price {
-    color: #13e6f2;
-    font-size: 24px;
-}
-
-.cart_product {
-    display: block;
-    margin: 15px -70px 10px 25px;
-}
-
-.cart_quantity_button a {
-    background: #F0F0E9;
-    color: #696763;
-    display: inline-block;
-    font-size: 14px;
-    height: 20px;
-    overflow: hidden;
-    text-align: center;
-    width: 20px;
-    float: left;
-}
-
-
-.cart_quantity_input {
-    color: #696763;
-    float: left;
-    font-size: 14px;
-    text-align: center;
-    font-family: 'Roboto',sans-serif;
-}
-
-.cart_quantity_input_prv {
-    color: #696763;
-    float: left;
-    font-size: 14px;
-    text-align: center;
-    font-family: 'Roboto',sans-serif;
-    margin-top: 6px;
-}
-
-.cart_delete {
-    overflow: hidden;
-}
-
-
-    .cart_delete a {
-        background: #F0F0E9;
-        color: #FFFFFF;
-    }
-
-        .cart_delete a:hover {
-            background: #13e6f2;
-        }
 
 
 .bg h2.title {
@@ -1754,28 +1585,26 @@ h2.title {
         border: 0;
     }
 
-
-.chose_area .update {
-    margin-left: 40px;
-}
-
-.update, .check_out, .open_map {
-    background: #12a7f1;
-    border-radius: 0;
+.btn-my {
+    background: #ee4f4f;
     color: #FFFFFF;
     margin-top: 18px;
-    border: none;
-    padding: 5px 15px;
+    transition: 0.25s all;
+    -webkit-transition: 0.25s all;
+    -moz-transition: 0.25s all;
+    -o-transition: 0.25s all;
+    -ms-transition: 0.25s all;
 }
 
-.update {
-    margin-left: 40px;
+.btn-my:hover {
+    background: #1B95E0;
+    color: #FFFFFF;
+    transition: 0.25s all;
+    -webkit-transition: 0.25s all;
+    -moz-transition: 0.25s all;
+    -o-transition: 0.25s all;
+    -ms-transition: 0.25s all;
 }
-
-.check_out, .open_map {
-    margin-left: 20px;
-}
-
 
 
 /*************************
@@ -1942,27 +1771,6 @@ h2.title {
         font-weight: 300;
         margin-right: 30px;
     }
-
-#cart_items .cart_info .table.table-condensed.total-result {
-    margin-bottom: 10px;
-    margin-top: 35px;
-    color: #696763;
-}
-
-    #cart_items .cart_info .table.table-condensed.total-result tr {
-        border-bottom: 0;
-    }
-
-    #cart_items .cart_info .table.table-condensed.total-result span {
-        color: #13e6f2;
-        font-weight: 700;
-        font-size: 16px;
-    }
-
-    #cart_items .cart_info .table.table-condensed.total-result .shipping-cost {
-        border-bottom: 1px solid #F7F7F0;
-    }
-
 
 
 
