fix LA break bootstrap layout

--- a/BookStore/Views/Cart/Index.cshtml
+++ b/BookStore/Views/Cart/Index.cshtml
@@ -5,6 +5,7 @@
     Layout = "~/Views/MyShared/MainLayout.cshtml";
 }
 <link href="~/Assets/css/main.css" rel="stylesheet" media="all">
+<link href="~/Assets/css/shopper-info.css" rel="stylesheet"/>
 <style>
     #map {
         height: 400px;
